@@ -4,6 +4,7 @@ Revision history for Perl extension Fl
 
     - New widgets:
         - Fl::Tabs - "File card tabs" interface
+        - Fl::Output - Simple text display widget
     - New demo script: eg/tabs.pl
 
 0.99.10 2016-06-04T00:08:58Z
